add scripted plugin for sbt plugin testing